python-web-server/tests/http/requests/invalid/001.py
from web_server.http.errors import NoMoreData

request = NoMoreData
